--- a/templates/accueil/mlegal.html.twig
+++ b/templates/accueil/mlegal.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mention Legales{% endblock %}
+{% block title %}Mentions Legales{% endblock %}
 
 {% block body %}
 
