add mention legal and CGU

--- a/templates/accueil/mlegal.html.twig
+++ b/templates/accueil/mlegal.html.twig
@@ -1,7 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Mentions Legales{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" href="{{('src/Css/contact.css')}}">{% endblock %}
 
 {% block body %}
+<div class="row mx-auto">
 
+<p class='mlegal'>Le site Internet thedistrict.fr est la propriété exclusive de Sellier Antoine.</p>
+
+
+<p class='mlegal'>Identifiant siret : 123456789012345</p>
+
+
+<p class='mlegal'>Propriétaire : Sellier Antoine</p>
+
+
+<p class='mlegal'>E-mail : contact@thedistrict.fr</p>
+
+
+<p class='mlegal'>Téléphone : 00 00 00 00 00</p>
+
+
+<p class='mlegal'>Conception du site internet : Sellier Antoine</p>
+
+
+<p class='mlegal'>Le site est hébergé par la société localhost, 1 rue de l'afpa, 80100 Amiens, Capital de ~1 euros, Siret : 0123456799874663210</p>
+</div>
 {% endblock %}
