--- a/public/src/Css/contact.css
+++ b/public/src/Css/contact.css
@@ -22,3 +22,50 @@
 .demandecontact {
     height: 250px;
 }
+
+.mlegal {
+    font-size: 2rem;
+    z-index: 2;
+    color: white;
+    text-shadow: 4px 0px 4px #9e0e40, 0 0 1em #9e0e40 , 0 0 0.2em #ff0059f3;
+    border-radius: 50px;
+    padding-right: 15px;
+    text-align: center !important;
+
+}
+
+.cgu {
+    font-size: 1.3rem;
+    z-index: 2;
+    color: white;
+    border-radius: 50px;
+    padding-right: 15px;
+    text-align: center !important;
+    margin : 5px;
+    background-color: rgba(0, 0, 0, 0.418);
+
+}
+
+.cguh1 {
+    font-size: 3rem;
+    z-index: 2;
+    color: #9e0e40;
+    text-shadow: 4px 0px 4px white, 0 0 1em white , 0 0 0.2em white;
+    border-radius: 50px;
+    padding-right: 15px;
+    text-align: center !important;
+    margin : 5px;
+    background-color: rgba(0, 0, 0, 0.418);
+}
+
+.cguh2 {
+    font-size: 2.5rem;
+    z-index: 2;
+    color: #e70808;
+    text-shadow: 4px 0px 4px white, 0 0 1em white , 0 0 0.2em white;
+    border-radius: 50px;
+    padding-right: 15px;
+    text-align: center !important;
+    margin : 5px;
+    background-color: rgba(0, 0, 0, 0.418);
+}
