--- a/templates/accueil/cgu.html.twig
+++ b/templates/accueil/cgu.html.twig
@@ -132,4 +132,5 @@ Pour toute question relative à l’application des présentes CGU, vous pouvez 
 coordonnées inscrites à l’ARTICLE 1.<br>
 CGU réalisées sur http://legalplace.<br>fr/
 3</p>
+<div class='row my-5'></div>
 {% endblock %}
