--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -191,7 +191,7 @@
                 <a class="nav-link navtext reveal-bot" href="{{ path("app_mlegal") }}"><p>Mentions Legales</p></a>
             </li>
             <li class="nav-item pt-3">
-                <a class="nav-link navtext reveal-bot" href="{{ path("app_cgu") }}"><p>CGU</p></a>
+                <a class="nav-link navtext reveal-bot" href="{{ path("app_cgu") }}"><p>Cgu</p></a>
             </li>
             <img class="navlogo" src="/src/img/logo/logo.png" alt="Logo The District">
             </ul>
