--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -71,7 +71,7 @@
 
     {# Login Modal #}
 
-    <div class="modal" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog">
   <div class="modal-content loginmodal">
     <div class="modal-header mx-auto">
@@ -82,10 +82,10 @@
     </div>
         <div class="modal-body container text-center">
 
-          <form action="#" method="POST" id='loginonoff'>
+          <form action="./src/php/login/loginform.php" method="POST">
             <div class="text-center login" id="loginchange">
                 <p class="align-self-center">Email</p><i class="fa-solid fa-envelope"></i>
-                <input name="mail" type="email" >
+                <input name="mail" type="email">
                 <p class="mt-3">Password</p><i class="fa-solid fa-lock"></i>
                 <input name="password" type="password">
                 <p class="passinv"> <br> </p>
@@ -93,8 +93,8 @@
             </div>
             </form>
 
-            <form action="#" Method="POST" enctype="multipart/form-data" id='insconoff'>
-              <div class=" text-center inscription fromins" id="inscription">
+            <form action="../../../src/php/inscri/checkform.php" Method="POST" enctype="multipart/form-data">
+              <div class=" text-center inscription" id="inscription">
                 <p>Nom</p>
                 <i class="fa-solid fa-user"></i>
                 <input type="text" name="fristname" id="fname">
@@ -125,7 +125,7 @@
     </div>
 </div>
 </div>
-</div>
+</div>'
 
 {# Modal Panier #}
 
@@ -199,14 +199,15 @@
     </div>
 </nav>
 </footer>
-        <script src="./src/js/btnclick.js"></script>
+
         <script src="https://kit.fontawesome.com/3fd2d451cc.js" crossorigin="anonymous"></script>
-        <script
-    src="https://code.jquery.com/jquery-3.7.0.js"
+<script
+  src="https://code.jquery.com/jquery-3.7.0.js"
   integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
   crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        {% block javascripts %}{% endblock %}
+        <script src="src/js/btnclick.js"></script>
+         {% block javascripts %}{% endblock %}
     </body>
 </html>
