--- a/templates/page/contact.html.twig
+++ b/templates/page/contact.html.twig
@@ -31,7 +31,7 @@
                         
                         <div class='row my-5'>
                             <label for="demandecontact" class="contactlabel">Demande :</label>
-                            <input type="text" name="demandecontact" id="demandecontact" class="contactinput demandecontact">
+                            <input type="textarea" name="demandecontact" id="demandecontact" class="contactinput demandecontact">
                         </div>
                         <div class="col-6"></div>
                         <div class='col'>
