--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -6,7 +6,15 @@
 <link rel="stylesheet" href="{{('src/Css/contact.css')}}">{% endblock %}
 
 {% block body %}
-form()
+<div class='row my-5 align-items-center'>
+        <div class="input-group ">
+            <div class="row mx-auto my-5">
+
+    {{ form(form) }} 
+
+            </div>
+        </div>
+  </div>
 {# 
 <div class='row my-5 align-items-center'>
     <form action="#" method='POST'>
