fix modal shop and add form class and label attr

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -129,7 +129,7 @@
 
 {# Modal Panier #}
 
-<div class="modal fade2" id="basket-shopping" tabindex="-1" aria-labelledby="basket-shoppingLabel" aria-hidden="true">
+<div class="modal fade" id="basket-shopping" tabindex="-1" aria-labelledby="basket-shoppingLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content shopmodal">
       <div class="modal-header mx-auto">
