--- a/public/src/Css/contact.css
+++ b/public/src/Css/contact.css
@@ -6,7 +6,7 @@
 .contactlabel {
     font-size: 1.875rem;
     font-family: 'craie';
-    z-index: 2;
+    z-index: 5 !important;
     color: white;
     text-shadow: 4px 0px 4px #9e0e40, 0 0 1em #9e0e40 , 0 0 0.2em #ff0059f3;
     border-radius: 50px;
@@ -17,6 +17,7 @@
 .contactinput {
     border-radius: 15px;
     left: 15px;
+    z-index: 6 !important;
 }
 
 .demandecontact {
