--- a/templates/page/_panier.html.twig
+++ b/templates/page/_panier.html.twig
@@ -21,11 +21,91 @@
       <div class="modal-body">
         <div class="panierbody">
         </div>
+        <div class='prixpaniertotal'>
+      <div>Prix total du panier</div>
+      <div class="paniertotal"></div>
+</div>
+        {% for panier in panier %}
 
-<pre>
-  {{ dump(app.session.get('panier')) }}
-</pre>
-{# <button class="btn deletepanierbtn" id="deletepanierbtn" data-id="${id}"><i class="fa-solid fa-trash"></i></button> #}
+<script>
+
+var id = {{panier.id}};
+var qtevalue = {{panier.qte}};
+var prix = {{panier.prix}};
+var newprix = prix*qtevalue;
+
+
+
+var recup_valeur_input_html = $('#recupvaleur').val()
+if(recup_valeur_input_html == undefined || recup_valeur_input_html == 0 || recup_valeur_input_html == null){
+  recup_valeur_input_html = 0;
+}
+var prix_total_panier = newprix + parseInt(recup_valeur_input_html);
+$('.paniertotal').replaceWith(`<div class="paniertotal">${prix_total_panier}</div>`);
+$('.paniertotal').append(`<input type='text' hidden class='paniertotalinput' id='recupvaleur' value="${prix_total_panier}" readonly>`);
+                                                   
+                                                   
+
+    var img = '{{panier.img}}';
+    var libelle = '{{panier.libelle}}';
+        
+        $('.panierbody').append(`<div class="row rows-col-4 panierrow${id}" id='panierrow${id}'></div>`);
+
+        $('.panierrow'+id).append(`<div class="col my-auto imgpaniercol${id}"></div>`);
+        $('.imgpaniercol'+id).append(`<img class="panierimg" src="src/img/plat/${img}" alt="${img}" height="32px" width="32px">`);
+        
+        $('.panierrow'+id).append(`<div class="col my-auto col my-auto panierlibelle${id}"></div>`);
+        $('.panierlibelle'+id).append(`${libelle}`);
+
+        $('.panierrow'+id).append(`<div class="col my-auto col my-auto panierprixu${id}"></div>`);
+        $('.panierprixu'+id).append(`prix/u${prix}`);
+
+        $('.panierrow'+id).append(`<div class="col my-auto col my-auto panierprixt${id}"></div>`);
+        $('.panierprixt'+id).append(`Prix/t${newprix}`);
+
+        $('.panierrow'+id).append(`<div class="col my-auto col my-auto panierqte${id}"></div>`);
+        $('.panierqte'+id).append(`<select name="${id}" class="changeqte" id="qteselect${id}"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option></select>`);
+
+        $('.panierrow'+id).append(`<div class="col my-auto col my-auto panierpaniersup${id}"></div>`);
+        $('.panierpaniersup'+id).append(`<button onclick="dlton(${id})" type="submit" class="btn deletepanierbtn" id='deletepanierbtn' data-id="${id}"><i class="fa-solid fa-trash"></i></button>`);
+
+              if(qtevalue == 2){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+                }
+               if(qtevalue == 3){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+               }
+               if(qtevalue == 4){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);   
+               } 
+               if(qtevalue == 5){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+               }
+               if(qtevalue == 6){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+               } 
+               if(qtevalue == '7'){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+               } 
+               if(qtevalue == '8'){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+               } 
+               if(qtevalue == '9'){
+                $(`#qteselect${id} option[value="${qtevalue}"]`).prop('selected', true);
+                $('.panierprix'+id).append(`${newprix}`);
+               }
+      
+          
+</script>
+        {% endfor %}
+      <button class="btn deletepanierbtnall" id="deletepanierbtn" data-id="${id}" onclick='dltonalll()'><i class="fa-solid fa-trash"></i></button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
